--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,9 @@ body {
 }
 
 /* use in homePage */
-.homepage_bg {
+/* .homepage_bg {
   background: url('./assets/Images/bghome.svg');
-}
+} */
 
 
 .gradient_color {
